outputs_20260331-105410-8a3c83b2/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_rh52rjea/src/egtm_atom_adc_tmadc_multiple_channels.c:9:
/tmp/tdd_build_rh52rjea/include/egtm_atom_adc_tmadc_multiple_channels.h:17:31: error: unknown type name ‘float32’; did you mean ‘_Float32’?
   17 | void updateEgtmAtom3phInvDuty(float32 *requestDuty);
      |                               ^~~~~~~
      |                               _Float32
/tmp/tdd_build_rh52rjea/src/egtm_atom_adc_tmadc_multiple_channels.c:13:10: fatal error: IfxPort_PinMap.h: No such file or directory
   13 | #include "IfxPort_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.
